<?xml version="1.0" encoding="utf-8"?>

<!--
 ~ Copyright 2020 David Odari
 ~
 ~ Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
 ~ in compliance with the License. You may obtain a copy of the License at
 *          http://www.apache.org/licenses/LICENSE-2.0
 ~ Unless required by applicable law or agreed to in writing, software distributed under the License
 ~ is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
 ~ or implied. See the License for the specific language governing permissions and limitations under
 ~ the License.
-->
<resources>
    <string name="app_name">The Force</string>

    <!-- Dashboard Activity -->
    <string name="info_no_matching_results">No matching results</string>
    <string name="info_no_results">No Matching Search Results</string>
    <string name="info_no_favorite_characters">No Favorite Characters</string>
    <string name="info_search_done">Search Done</string>
    <string name="content_description_more_info_arrow">View Character Details</string>
    <string name="hint_character_name">Character Name</string>
    <string name="title_favorites">Favorites</string>
    <string name="menu_title_favorites">Favorites</string>
    <string name="info_explore">Explore StarWars</string>
    <string name="info_removed_from_favs">Removed From Favorites</string>
    <string name="info_added_to_favs">Added To Favorites</string>

    <!-- Dashboard Activity Menu -->
    <string name="menu_title_settings">Settings</string>

    <!-- Character Detail Activity -->
    <string name="title_birth_year">Birth Year</string>
    <string name="title_height">Height</string>
    <string name="title_planet">Planet</string>
    <string name="title_films">Films</string>
    <string name="title_species">Species</string>
    <string name="info_loading_complete">Character Loaded Successfully</string>
    <string name="info_specie_information_unavailable">Specie information unavailable</string>
    <string name="error_loading_films">Error Loading Films</string>
    <string name="error_loading_planet"> Error Loading Planet</string>
    <string name="error_loading_specie">Error Loading Specie</string>

    <!-- Data Binding String Templates -->
    <string name="template_planet_name">Name : %s</string>
    <string name="template_planet_population">Population : %,d</string>
    <string name="template_species_name">Name : %s</string>
    <string name="template_height_cm">%s cm</string>
    <string name="template_height_inches">%s inches</string>
    <string name="template_species_language">Language : %s</string>

    <!-- Settings Activity -->
    <string name="title_settings">Settings</string>
    <string name="star_wars_copyright">Star Wars and all associated names are copyright Lucasfilm ltd.</string>

    <!-- About Activity -->
    <string name="title_about">About</string>
    <string name="info_app_version">Version %s</string>

    <!-- Error Strings -->
    <string name="error_check_internet_connection">Check Internet Connection</string>
    <string name="error_oops_error_occured">Oops!! An Error Occurred</string>
    <string name="error_loading_character_details">Couldn\'t load character details</string>
    <string name="back_to_home_dashboard_content_desc">Back to home dashboard</string>


</resources>
